sumo/tests/traci/StopNode/InvalidNode/stopnode_invalidnode.prog
simstep 1 1

stopnode2d -1 0 0 0 0

simstep 100
% simstep_repeat 2 100 1 1 %
